<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"

    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juan.sanpedrodelosmilagros.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/titulo"
        android:layout_gravity="center"
        android:textColor="@color/white"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/sanpedromilagros"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:id="@+id/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:id="@+id/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/iniciarSes"
        android:layout_gravity="center"
        android:id="@+id/login"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
       />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registro"
        android:layout_gravity="center"
        android:id="@+id/register"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />


</LinearLayout>
